cinderella now successfully starts on a vcloud